Changed back to the top code

--- a/html/aboutme.html
+++ b/html/aboutme.html
@@ -60,6 +60,6 @@
             </li>
         </ul>
     </ol>
-    Back to the <a href="top">Top</a>
+    Back to the <a href="#top">Top</a>
 </body>
 </html>
